# SuckerChess

./: .clang-format  .gitignore  CMakeLists.txt  ChessBoard.cpp  ChessBoard.hpp  ChessEngine.cpp  ChessEngine.hpp  ChessGame.cpp  ChessGame.hpp  ChessMove.cpp  ChessMove.hpp  ChessPiece.cpp  ChessPiece.hpp  ChessPlayer.cpp  ChessPlayer.hpp  ChessPosition.cpp  ChessPosition.hpp  ChessTournament.cpp  ChessTournament.hpp  LICENSE  README.md  Utilities.cpp  Utilities.hpp  benchmark.cpp  build.py  build.sh  evolution.cpp  main.cpp  perft.cpp
src/: CastlingRights.cpp  CastlingRights.hpp  ChessBoard.cpp  ChessBoard.hpp  ChessEngine.cpp  ChessEngine.hpp  ChessGame.cpp  ChessGame.hpp  ChessMove.cpp  ChessMove.hpp  ChessPiece.cpp  ChessPiece.hpp  ChessPlayer.cpp  ChessPlayer.hpp  ChessPosition.cpp  ChessPosition.hpp  ChessTournament.cpp  ChessTournament.hpp  GenePool.cpp  GenePool.hpp  UCI.cpp  UCI.hpp  Utilities.cpp  Utilities.hpp
src/Engine/: Preference.cpp  Preference.hpp  PreferenceChain.cpp  PreferenceChain.hpp  Random.cpp  Random.hpp  TreeSearch.cpp  TreeSearch.hpp  UCI.cpp  UCI.hpp
